crates/uitest/fixtures/ty/def/trait_impl_nested_projection_arg_missing_bound.snap
---
source: crates/uitest/tests/ty.rs
assertion_line: 27
expression: diags
input_file: fixtures/ty/def/trait_impl_nested_projection_arg_missing_bound.fe
---
error[6-0003]: trait bound is not satisfied
   ┌─ trait_impl_nested_projection_arg_missing_bound.fe:10:6
   │
10 │ impl Foo< <Missing as Bound>::Item > for S {}
   │      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Missing` doesn't implement `Bound`

error[6-0003]: trait bound is not satisfied
   ┌─ trait_impl_nested_projection_arg_missing_bound.fe:12:17
   │
12 │ fn needs_foo<T: Foo< <Missing as Bound>::Item >>(value: T) {}
   │                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Missing` doesn't implement `Bound`
